# my-QT-pograms

./: README.md
Adding_a_window/: CMakeLists.txt  secdialog.ui
Calender-Date/: CMakeLists.txt  mainwindow.ui
Electricity_bill/: Electricity_bill.pro  electricitybillcalculator.cpp  electricitybillcalculator.h  main.cpp  mainwindow.cpp  mainwindow.h
LayoutDemo/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
Qmessagebox/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
SQLiteconnection/: SQLiteconnection.pro  eventreminder.cpp  eventreminder.h  eventreminder.ui  main.cpp
SplitterDemo/: CMakeLists.txt  mainwindow.ui
bill/: bill.pro  electricitybill.cpp  electricitybill.h  electricitybill.ui  main.cpp
build-Adding_a_window-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Calender-Date-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Electricity_bill-Desktop_Qt_6_2_4_MSVC2019_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-LayoutDemo-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Qmessagebox-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-SQLiteconnection-Desktop_Qt_6_2_4_MSVC2019_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_eventreminder.h
build-SplitterDemo-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-bill-Desktop_Qt_6_2_4_MSVC2019_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_electricitybill.h
calender/: CMakeLists.txt  calendardialog.cpp  calendardialog.h  calendardialog.ui  main.cpp
(+243 files in other folders)
